--- a/about.html
+++ b/about.html
@@ -12,15 +12,17 @@
 </head>
 <body>
     <header>
-        <h2 style="text-align: center;">Robert Yohnka</h2>
+        <nav>
+            <div id="logo">
+                <h2>Robert C Yohnka</h2>
+            </div>    
+            <div id="links">
+                <a href="./home.html">Home</a> |
+                <a href="./about.html">About</a> |
+                <a href="./portfolio.html">Portfolio</a> |
+            </div>
+        </nav>
     </header>
-
-    </header>
-    <nav>
-        <a href="./home.html">Home</a> |
-        <a href="./about.html">About</a> |
-        <a href="./portfolio.html">Portfolio</a> |
-    </nav>
     <h2>From There to Here</h2>
 </body>
 </html>
