--- a/home.html
+++ b/home.html
@@ -36,17 +36,21 @@
         </div>
         
         <aside>
-            <img src="./images/headshot.png" alt="Yohnka-Pic" width = 150>
+                <img src="./headshot.png" alt="Yohnka-Pic" style="
+                padding-inline: 5px;
+                width: 150px;
+                ">
         </aside>
 
         <section>
-            <h3>A brief history of my education, career and accomplishments...</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam recusandae molestiae quia id laudantium aliquam, optio sapiente non in ea ullam, voluptas, perspiciatis tenetur laborum obcaecati dignissimos debitis provident iste!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt laborum, similique eius provident nam libero itaque. Ex est exercitationem officia iste ullam eaque? Unde, dolor? Dicta ipsa non sunt minima.</p>
+            <h3>The trip so far:<br> A short list of professional accomplishments...</h3>
+            <p>I grew up in Kankakee, Illinois -a small town, 60 miles south of Chicago. I graduated with a Bachelor's degree in Psychology from Lewis University and a Masters of Business Administration from Seattle Pacific University.  My career to date has been focused on Higher Education and specifically, Research Administration.</p>
+            <p>In 2006, I moved to Lusaka, Zambia to manage business and finance operations for Emory University's research centers in Africa. Until 2010, I lived in the capital of Zambia and managed satellite sites in Northern Zambia and in Kigali, Rwanda. I returned to the US and have worked at Emory, adminstering research proejcts across the School of Medicine.</p>
+            <p>Throughout my career, I have found innovative solutions to complex real-world business cases.  See a short list of a few of my favorite projects <a href="./portfolio">here.</a></p>
         </section>
         <article>
             <h3>
-            The road ahead: A vision for melding experience, talents and new Fullstack software development skills...
+            The road ahead: Experience, talents and new Fullstack software development skills...
             </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia magni animi nulla delectus itaque libero dicta laboriosam alias id, recusandae similique accusantium cum laudantium quae odit repellendus. Hic, eum fuga.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nostrum adipisci praesentium voluptas hic doloribus debitis soluta modi sequi magnam veniam voluptatem nesciunt error totam, non nam animi iste recusandae.</p>
