--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div id="logo">
-                <h2>Robert C Yohnka</h2>
+                <h2>Robert C Yohnka - Branch Update</h2>
             </div>    
             <div id="links">
                 <a href="./home.html">Home</a> |
@@ -23,6 +23,12 @@
             </div>
         </nav>
     </header>
-    <h2>From There to Here</h2>
+            <h2>Current Projects</h2>
+        <p>I support 20 faculty members in the managerment of 41 active reasearch projects in close collaboration with Principal Investigators in the Department of Urology.  I support 25 Urologists that have dual apppointments between Emory University and Emory Hospital. In total, Emory receives $1 Billion dollars per year in research funding.  I am on a team of 50 administratorst that handle pre and post award functions.  Sponsors include NIH, Dept of Defense, CDC, industry sponsors, foundations and many more.</p>
+        <p>Research administration is complicated by the number of stakeholders that have influence over the work. There is a small pot of money and many great ideas that go unfunded. This work requires the ability to combine data from many sources to create meaningful reports for PIs, Departments and Sponsors. The individual tasks are often not overly complicated, but the volume of tasks and tight deadlines keep the work exciting.</p>
+    </section> 
+    <footer>
+        <a href="https://ras.emory.edu/">Research Administration Services at Emory University</a>
+    </footer>
 </body>
 </html>
