--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./website.css" />
-    <title>Yohnka Resume2024</title>
+    <title>Yohnka Resume</title>
 </head>
 <body>
         <header>
@@ -46,7 +46,7 @@
             <h3>The trip so far:<br> A short list of professional accomplishments...</h3>
             <p>I grew up in Kankakee, Illinois -a small town, 60 miles south of Chicago. I graduated with a Bachelor's degree in Psychology from Lewis University and a Masters of Business Administration from Seattle Pacific University.  My career to date has been focused on Higher Education and specifically, Research Administration.</p>
             <p>In 2006, I moved to Lusaka, Zambia to manage business and finance operations for Emory University's research centers in Africa. Until 2010, I lived in the capital of Zambia and managed satellite sites in Northern Zambia and in Kigali, Rwanda. I returned to the US and have worked at Emory, adminstering research proejcts across the School of Medicine.</p>
-            <p>Throughout my career, I have found innovative solutions to complex real-world business cases.  See a short list of a few of my favorite projects <a href="./portfolio">here.</a></p>
+            <p>Throughout my career, I have found innovative solutions to complex real-world business cases.  See a short list of a few of my favorite projects <a stylye color: black; href="./portfolio">here</.a>.</p>
         </section>
         <article>
             <h3>
