--- a/portfolio.html
+++ b/portfolio.html
@@ -8,14 +8,28 @@
 </head>
 <body>
     <header>
-        <h2 style="text-align: center;">Robert Yohnka</h2>
-    </header>
+    </header>    
         <nav>
-            <a href="./home.html">Home</a> |
-            <a href="./about.html">About</a> |
-            <a href="./portfolio.html">Portfolio</a> |
+            <div id="logo">
+                <h2>Robert C Yohnka</h2>
+            </div>    
+            <div id="links">
+                <a href="./home.html">Home</a> |
+                <a href="./about.html">About</a> |
+                <a href="./portfolio.html">Portfolio</a> |
+            </div>
         </nav>
-    
-    <h2>Accomplishments</h2>
+    <section class=".section">
+        <h2>Seattle Pacific University 2001-2005</h2>
+        <p>This is where I went to school and started managing federally funded financial aid programs.</p>
+    </section>
+    <section class=".section">
+        <h2>Zambia Emory HIV Research Project (2006-2010)</h2>
+        <p>I lived in Lusaka Zambia and managed USAID funded programs related to HIV Vaccine research</a></p>
+    </section>
+    <section class=".section">
+        <h2>Emory University 2010-2024</h2>
+        <p>I manage research projects from a central office at Emory.  I am a Navigator in my current role.  I help facilitate resarch across the Atlanta area with partnering institutions and hospitals.</a></p>
+    </section>
 </body>
 </html>
