--- a/home.html
+++ b/home.html
@@ -19,18 +19,18 @@
 <body>
         <header>
             <nav>
-                <div id="logo">
-                    <h2>Robert C Yohnka</h2>
+                <div>
+                    <h1>Robert C Yohnka</h1>
                 </div>    
-                <div id="links">
+                <div>
                     <a href="./home.html">Home</a> |
                     <a href="./about.html">About</a> |
                     <a href="./portfolio.html">Portfolio</a> |
+
                 </div>
             </nav>
         </header>
-    
-    <main>
+        <main>
         <div>
             <h4 style="text-align: center;">Innovator | Implementer | Motivator</h4>
         </div>
@@ -43,22 +43,43 @@
         </aside>
 
         <section>
-            <h3>The trip so far:<br> A short list of professional accomplishments...</h3>
-            <p>I grew up in Kankakee, Illinois -a small town, 60 miles south of Chicago. I graduated with a Bachelor's degree in Psychology from Lewis University and a Masters of Business Administration from Seattle Pacific University.  My career to date has been focused on Higher Education and specifically, Research Administration.</p>
-            <p>In 2006, I moved to Lusaka, Zambia to manage business and finance operations for Emory University's research centers in Africa. Until 2010, I lived in the capital of Zambia and managed satellite sites in Northern Zambia and in Kigali, Rwanda. I returned to the US and have worked at Emory, adminstering research proejcts across the School of Medicine.</p>
-            <p>Throughout my career, I have found innovative solutions to complex real-world business cases.  See a short list of a few of my favorite projects <a stylye color: black; href="./portfolio">here</.a>.</p>
+            <h3>Coming into Fullstack Academy</h3>
+            <p>I grew up in Kankakee, Illinois and I graduated with a Bachelor's degree in Psychology from Lewis University and a Masters of Business Administration from Seattle Pacific University.  My career to date has been focused on Higher Education and specifically, Research Administration.</p>
+            <!-- <p>In 2006, I moved to Lusaka, Zambia to manage business and finance operations for Emory University's research centers in Africa. Until 2010, I lived in the capital of Zambia and managed satellite sites in Northern Zambia and in Kigali, Rwanda. I returned to the US and have worked at Emory, adminstering research proejcts across the School of Medicine.</p> -->
+            <!-- <p>I have participated on research teams and published cutting edge science. Day to day, I find complex solutions to real-world business cases.  See a short list of a few of my favorite projects <a class=".a" href="./portfolio">here</a>.</p> -->
         </section>
-        <article>
-            <h3>
-            The road ahead: Experience, talents and new Fullstack software development skills...
-            </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia magni animi nulla delectus itaque libero dicta laboriosam alias id, recusandae similique accusantium cum laudantium quae odit repellendus. Hic, eum fuga.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nostrum adipisci praesentium voluptas hic doloribus debitis soluta modi sequi magnam veniam voluptatem nesciunt error totam, non nam animi iste recusandae.</p>
-        </article>
+        <section>   
+            <h3>Building a Career in Software Development</h3>
+            <p>I'm looking for a position that combines problem solving skills with newly acquired fullstack development tools.  I am optimistic about the opportunities that technology will make possible in the next few years.  </p>
+            <!-- <p>Tech solutions have gone from the pages of science fiction, to being uniquely available to small and mid-sized organizations. With appropriate tech solutions, companies can leverage data in new and profitable ways. Complicated solutions brought by Artificial Intelligence, Machine Learning Operations, and Big Data Processing, these solutions will be necessary to stay competitive tomorrow.   </p> -->
+            <!-- <p>I possess the leadership experience and interpersonal skills to proactively collaborate to understand and solve complicated and correlated business factors.</p> -->
+            <!-- <p>I am seeking an environment where expectations are set high and together we can work collaboratively to find solutions to the most complex scenarios.  I look forward to the challenges ahead. -->
+        </section>
     <script src="./website.js"></script>
+    <script src="./javascript.js"></script>
     </main>
     <footer>
-        yohnka@gmail.com
+         <div>
+            <p>Please fill out this form if you want to hear more about my journey</p>
+            <form action="./success.html" target="_blank">
+            <!-- <label for="text">Name</label>     -->
+            <input 
+            class="text"
+            type="text"
+            placeholder="Name"
+            <!-- required -->
+            <input
+            class="text email-text"
+            type="email"
+            placeholder="Email"
+            <!-- required -->
+            <input
+             class="text"
+             type="text"
+             placeholder="Message"
+             <!-- required -->
+        <input class="button" type="submit" value="submit" />
+</div>        
     </footer>
 </body>
 </html>
