--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <p>This is where I went to school and started managing federally funded financial aid programs.</p>
     </section>
     <section class=".section">
-        <h2>Zambia Emory HIV Research Project (2006-2010)</h2>
+        <h2>Zambia Emory HIV Research Project 2006-2010</h2>
         <p>I lived in Lusaka Zambia and managed USAID funded programs related to HIV Vaccine research</a></p>
     </section>
     <section class=".section">
